Use tasks instead of handlers for litewitness
The purpose of this change is to make the litewitness role work
properly also when it is used to setup two or more litewitness
instances running in parallel on the same machine.

Handlers did not work well in that case because we do not have
enough control over when handlers are run and what values
different variables will have at that time. For example, it can
happen that when two witnesses foo and bar are to be configured,
the handler that was supposed to start the service for foo is
instead starting the service for bar, so that foo is missed.

--- a/roles/litewitness/tasks/configure.yml
+++ b/roles/litewitness/tasks/configure.yml
@@ -33,7 +33,7 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  notify: Reconfigure litewitness
+  register: litewitness_config_1
 
 - name: Add litewitness configuration (non-sigsum vkey log keys)
   ansible.builtin.template:
@@ -42,7 +42,7 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  notify: Reconfigure litewitness
+  register: litewitness_config_2
 
 - name: Add configuration script
   ansible.builtin.copy:
@@ -51,7 +51,14 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  notify: Reconfigure litewitness
+  register: litewitness_config_3
+
+- name: Reconfigure litewitness
+  ansible.builtin.command: "~/.local/bin/litewitness-configure {{ litewitness_database_file }} {{ litewitness_home }}/.config/litewitness/log-keys {{ litewitness_home }}/.config/litewitness/non-sigsum-log-keys"
+  changed_when: false  # silence ansible-lint
+  become_user: "{{ litewitness_user }}"
+  become: true
+  when: (litewitness_config_1 is changed) or (litewitness_config_2 is changed) or (litewitness_config_3 is changed)
 
 - name: Add start script
   ansible.builtin.template:
@@ -60,14 +67,28 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  notify: Restart litewitness
+  register: litewitness_start_script
 
 - name: Add systemd .service file
   ansible.builtin.template:
     src: litewitness@.service.j2
     dest: "/etc/systemd/system/litewitness@.service"
     mode: "0644"
-  notify:
-    - Reload systemd
-    - Enable and start litewitness
-    - Restart litewitness
+  register: litewitness_systemd_service_file
+
+- name: Reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: true
+  when: litewitness_systemd_service_file is changed
+
+- name: Enable and start litewitness
+  ansible.builtin.systemd:
+    name: "litewitness@{{ litewitness_user }}"
+    enabled: true
+    state: started
+
+- name: Restart litewitness
+  ansible.builtin.systemd:
+    name: "litewitness@{{ litewitness_user }}"
+    state: restarted
+  when: (litewitness_start_script is changed) or (litewitness_systemd_service_file is changed)
