--- a/roles/litewitness/tasks/main.yml
+++ b/roles/litewitness/tasks/main.yml
@@ -2,9 +2,12 @@
 - name: Enforce constraints
   ansible.builtin.include_tasks: constraints.yml
 
-- name: Configure litewitness
-  ansible.builtin.include_tasks: configure.yml
+- name: Prepare litewitness user and directories
+  ansible.builtin.include_tasks: prep.yml
 
 - name: Install litetlog Go binaries
   ansible.builtin.include_tasks: go.yml
   loop: "{{ litewitness_install_tools_from_litetlog }}"
+
+- name: Configure litewitness
+  ansible.builtin.include_tasks: configure.yml
