Change to more readable variable names

--- a/roles/litewitness/tasks/configure.yml
+++ b/roles/litewitness/tasks/configure.yml
@@ -7,7 +7,7 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  register: litewitness_config_1
+  register: litewitness_config_keys
 
 - name: Add litewitness configuration (non-sigsum vkey log keys)
   ansible.builtin.template:
@@ -16,7 +16,7 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  register: litewitness_config_2
+  register: litewitness_config_other_keys
 
 - name: Add configuration script
   ansible.builtin.copy:
@@ -25,14 +25,14 @@
     owner: "{{ litewitness_user }}"
     group: "{{ litewitness_user }}"
     mode: "0755"
-  register: litewitness_config_3
+  register: litewitness_config_script
 
 - name: Reconfigure litewitness
   ansible.builtin.command: "~/.local/bin/litewitness-configure {{ litewitness_database_file }} {{ litewitness_home }}/.config/litewitness/log-keys {{ litewitness_home }}/.config/litewitness/non-sigsum-log-keys"
   changed_when: false  # silence ansible-lint
   become_user: "{{ litewitness_user }}"
   become: true
-  when: (litewitness_config_1 is changed) or (litewitness_config_2 is changed) or (litewitness_config_3 is changed)
+  when: (litewitness_config_keys is changed) or (litewitness_config_other_keys is changed) or (litewitness_config_script is changed)
 
 - name: Add start script
   ansible.builtin.template:
