--- a/roles/litewitness/defaults/main.yml
+++ b/roles/litewitness/defaults/main.yml
@@ -49,3 +49,9 @@ litewitness_litetlog_version: "v0.4.3"  # default litetlog version
 litewitness_tools_from_litetlog:
   - {name: "litewitness"}
   - {name: "witnessctl"}
+
+# Username to use for the sigsum_agent dependency. One possible usage
+# is that if you run several instances of the litewitness role, you
+# can make them share the same sigsum_agent by setting this variable
+# to the same value for all instances of the litewitness role.
+litewitness_sigsum_agent_user: "sigsum-agent-{{ litewitness_user }}"
