Documentation in mariadb role
Add very brief mariadb README.md file and comments in
mariadb/defaults/main.yml file.

Closes https://git.glasklar.is/sigsum/admin/ansible/-/issues/51

--- a/roles/mariadb/defaults/main.yml
+++ b/roles/mariadb/defaults/main.yml
@@ -1,8 +1,11 @@
 ---
 
-mysql_root_user: root
+# The mysql root username is not configurable, it is always "root"
+
+# Password for mysql root user
 mysql_root_password: ""
 
+# Usernames, passwords and permissions for mysql users
 mysql_users:
   - user: "sigsum"
     password: "changeme"
