Bugfix: make log restart from cronjob work also for secondary node
Make the cronjob for weekly refreshing of the public suffix list
work also for the secondary node.

Also add verification related to this in a molecule test.

Closes https://git.glasklar.is/sigsum/admin/ansible/-/issues/71

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -240,3 +240,18 @@
     - name: Assert correct tree size
       ansible.builtin.assert:
         that: (secondary_tree_size|int + test_num_messages) == new_secondary_tree_size|int
+
+- name: Verify that log can be restarted by {{ sigsum_user }} user
+  hosts:
+    - sigsum-primary
+    - sigsum-secondary
+  vars_files:
+    - ../../roles/sigsum/defaults/main.yml  # role defaults
+    - "host_vars/{{ inventory_hostname }}.yml"  # what converge used
+    - host_vars/test.yml  # what this verify playbook additionally uses
+  tasks:
+    - name: Restart log as {{ sigsum_user }} user
+      ansible.builtin.shell: |
+        sudo /usr/bin/systemctl restart "sigsum-log-{{ sigsum_role }}@{{ sigsum_logname }}"
+      become_user: "{{ sigsum_user }}"
+      become: true
