Update description in README.md and galaxy.yml
Update description to add that this repo contains roles for not
only transparency logs but also for witnesses.

Also a few other minor changes in README.md.

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -11,6 +11,6 @@ authors:
 tags:
   - sigsum
 license_file: LICENSE
-description: Roles and modules for installing and setting up a Sigsum log
+description: Roles and modules for installing and setting up Sigsum transparency logs and witnesses
 dependencies:
   "community.mysql": "3.12.0"
