[yubihsm_connector] Make script executable

--- a/roles/yubihsm_connector/tasks/monitor.yml
+++ b/roles/yubihsm_connector/tasks/monitor.yml
@@ -9,6 +9,7 @@
   ansible.builtin.template:
     dest: /usr/bin/yubihsm-present-p
     src: usr/bin/yubihsm-present-p.j2
+    mode: '0755'
 
 - name: Create service verifying the presence of a YubiHSM device
   ansible.builtin.copy:
