Move yhsm dev monitoring to sigsum_agent

--- a/roles/sigsum_agent/defaults/main.yml
+++ b/roles/sigsum_agent/defaults/main.yml
@@ -33,3 +33,10 @@ sigsum_agent_yubihsm_key_id: "500"  # default key id for logs in core/key-mgmt
 sigsum_agent_yubihsm_addr: "localhost"  # default yubihsm-connector value
 sigsum_agent_yubihsm_port: "12345"  # default yubihsm-connector value
 sigsum_agent_yubihsm_connector_retry: true
+
+# If defined, specifies the YubiHSM USB device to monitor for being
+# available. Syntax: serial number as per lsusb(1) output.
+# sigsum_agent_yubihsm_monitor_device: 0018952892
+
+# If defined, email is being sent if USB device is not being present.
+# sigsum_agent_yubihsm_monitor_email: sysadmin@domain
