--- a/roles/sigsum_agent/tasks/monitor.yml
+++ b/roles/sigsum_agent/tasks/monitor.yml
@@ -20,8 +20,8 @@
 
       [Service]
       Type=oneshot
-      User=nobody
-      Group=nogroup
+      User={{ sigsum_agent_user }}
+      Group={{ sigsum_agent_user }}
       ExecStart=/usr/bin/yubihsm-present-p {{ sigsum_agent_yubihsm_monitor_device }}
 
       # Sandboxing
