--- a/roles/sigsum_agent/tasks/monitor.yml
+++ b/roles/sigsum_agent/tasks/monitor.yml
@@ -6,9 +6,9 @@
     pkg: mailutils
 
 - name: Install script verifying the presence of a YubiHSM device
-  ansible.builtin.template:
+  ansible.builtin.copy:
     dest: /usr/bin/yubihsm-present-p
-    src: usr/bin/yubihsm-present-p.j2
+    src: usr/bin/yubihsm-present-p
     mode: '0755'
 
 - name: Create service verifying the presence of a YubiHSM device
@@ -22,7 +22,7 @@
       Type=oneshot
       User={{ sigsum_agent_user }}
       Group={{ sigsum_agent_user }}
-      ExecStart=/usr/bin/yubihsm-present-p {{ sigsum_agent_yubihsm_monitor_device }}
+      ExecStart=/usr/bin/yubihsm-present-p {{ sigsum_agent_yubihsm_monitor_device }} {{ sigsum_agent_yubihsm_monitor_email|default("") }}
 
       # Sandboxing
       ProtectSystem=full
