Add provisioner part in molecule files for golang and yubihsm_connector
This adds a preparatory step that helps avoid problems with the
commands python3 and sudo not being available.

--- a/molecule/golang/molecule.yml
+++ b/molecule/golang/molecule.yml
@@ -10,3 +10,8 @@ platforms:
     image: docker.io/library/debian:bookworm  # the golang role will configure backports
   - name: trixie
     image: docker.io/library/debian:trixie
+
+provisioner:
+  name: ansible
+  playbooks:
+    prepare: ../common/prepare_debian.yml
