--- a/molecule/yubihsm_connector/molecule.yml
+++ b/molecule/yubihsm_connector/molecule.yml
@@ -8,3 +8,8 @@ platforms:
     image: docker.io/library/debian:bookworm
   - name: trixie
     image: docker.io/library/debian:trixie
+
+provisioner:
+  name: ansible
+  playbooks:
+    prepare: ../common/prepare_debian.yml
