Refactor lists of go tools in host_vars files for molecule tests
This corresponds to changes that were done in the sigsum and
litewitness roles earlier, see commit 6fb550a3a0aa746ef2b564874572dd0f7b8fb37d

--- a/molecule/default/host_vars/sigsum-primary-ssh-agent.yml
+++ b/molecule/default/host_vars/sigsum-primary-ssh-agent.yml
@@ -47,10 +47,25 @@ sigsum_internal_endpoint: "0.0.0.0:10000"
 sigsum_trillian_rpc_server: "localhost:6962"
 
 # Go tooling
-sigsum_tools_from_sigsum_go:
-  - { name: "sigsum-key" }  # needed by sigsum role
-  - { name: "sigsum-submit" }  # needed by verify.yml
-  - { name: "sigsum-verify" }  # needed by verify.yml
+sigsum_install_tools_from_sigsum_go:
+  - {
+     name: "sigsum-key",
+     'source': "{{ sigsum_lib_source }}",
+     'version': "{{ sigsum_lib_version }}",
+     'handlers': [],
+    }
+  - {
+     name: "sigsum-submit",
+     'source': "{{ sigsum_lib_source }}",
+     'version': "{{ sigsum_lib_version }}",
+     'handlers': [],
+    }
+  - {
+     name: "sigsum-verify",
+     'source': "{{ sigsum_lib_source }}",
+     'version': "{{ sigsum_lib_version }}",
+     'handlers': [],
+    }
 
 # Go compiler settings
 golang_ensure_min_version: true
