--- a/molecule/default/host_vars/sigsum-primary.yml
+++ b/molecule/default/host_vars/sigsum-primary.yml
@@ -33,7 +33,22 @@ sigsum_trillian_rpc_server: "localhost:6962"
 sigsum_secondary_url: "http://sigsum-secondary:{{ sigsum_internal_endpoint | split(':') | last }}/{{ sigsum_url_prefix }}"
 
 # Go tooling
-sigsum_tools_from_sigsum_go:
-  - { name: "sigsum-key" }  # needed by sigsum role
-  - { name: "sigsum-submit" }  # needed by verify.yml
-  - { name: "sigsum-verify" }  # needed by verify.yml
+sigsum_install_tools_from_sigsum_go:
+  - {
+     name: "sigsum-key",
+     'source': "{{ sigsum_lib_source }}",
+     'version': "{{ sigsum_lib_version }}",
+     'handlers': [],
+    }
+  - {
+     name: "sigsum-submit",
+     'source': "{{ sigsum_lib_source }}",
+     'version': "{{ sigsum_lib_version }}",
+     'handlers': [],
+    }
+  - {
+     name: "sigsum-verify",
+     'source': "{{ sigsum_lib_source }}",
+     'version': "{{ sigsum_lib_version }}",
+     'handlers': [],
+    }
